<?xml version="1.0"?>
<package>
  <name>terabot_description</name>
  <version>1.0.0</version>
  <description>
    This package includes the xacro, urdf and meshes for the kinematic description of the 
    terabot robot arm 
  </description>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/terabot_description</url>
  <author>Robotnik Automation</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_depend>roscpp</build_depend> 
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <run_depend>roscpp</run_depend> 
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
     
  <export>
  </export>
  
</package>



